# smart-intrusion-detection

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE_VF.md  DETAILS_TRANSPORT_PQC.md  DETAILS_TRANSPORT_PQC_EN.md  README.md  README_AI_ENGINE.md  REPARTITION_RYAN_RANIA.md  REPARTITION_RYAN_RANIA_VF.md  allowlist.json  pdf_style.css  pyproject.toml  requirements.txt
Brouillon/: cert_manager.py  forward_proxy.py  gen_certs.py  hybrid_crypto.py  log_signer.py  requirements.txt  reverse_proxy.py  session_cache.py  test_security.py  tls_client.py  tls_server.py
ai-engine/: pyproject.toml
ai-engine/backend/: api_models.py  app.py  cli.py  datastore.py  replay.py  ws_manager.py
ai-engine/backend/routes/: __init__.py  alerts.py  devices.py  events.py  logs.py  score.py  users.py  ws.py
ai-engine/backend/tests/: test_api.py
ai-engine/dataset/generators/: __init__.py  motion.py  orchestrator.py  timeline.py
ai-engine/dataset/scenarios/: __init__.py  base.py  camera_compromise.py  forced_door.py
ai-engine/dataset/tests/: test_step_2b.py
ai-engine/dataset/topology/: __init__.py  building_b1.yaml
ai-engine/evaluation/: __init__.py  metrics.py
ai-engine/evaluation/tests/: test_evaluation.py
ai-engine/features/: __init__.py  baselines.py  cli.py  extractor.py  frequency.py  io.py  network.py  schema.py  spatial.py  temporal.py
ai-engine/features/tests/: test_features.py
ai-engine/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ai-engine/frontend/src/: App.tsx  index.css
ai-engine/frontend/src/api/: client.ts  types.ts
ai-engine/frontend/src/components/: AlertFeed.tsx  AlertFilterBar.tsx  BuildingMap.tsx  ClassificationBadge.tsx  Header.tsx  Liveticker.tsx  ScoreCard.tsx
ai-engine/frontend/src/hooks/: useApi.ts  useEventStream.ts
ai-engine/frontend/src/lib/: alertFilter.ts  format.ts
ai-engine/frontend/src/pages/: AlertsPage.tsx  Dashboard.tsx  UserDetail.tsx
ai-engine/fusion/: __init__.py  cli.py  correlator.py  scorer.py
ai-engine/fusion/tests/: test_fusion.py
ai-engine/models/: __init__.py  cli.py  isolation_forest.py  rules_engine.py
ai-engine/models/tests/: test_models.py
ai-engine/schemas/: __init__.py  events.py  payloads.py
ai-engine/scoring_service/: __init__.py  alert_builder.py  batch.py  cli.py  pipeline.py  stream.py
ai-engine/scoring_service/output/: test_badge_off_hours.alerts.jsonl  test_camera_compromise.alerts.jsonl  test_credential_theft.alerts.jsonl  test_forced_door.alerts.jsonl  test_hybrid_intrusion.alerts.jsonl  test_revoked_badge.alerts.jsonl  test_tailgating.alerts.jsonl
ai-engine/scoring_service/tests/: test_pipeline.py
ai-engine/tests/: test_schemas.py
ai_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+61 files in other folders)
