[project]
name = "ai-engine"
version = "0.1.0"
description = "Behavioural intelligence engine for converged IoT/AI security"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["schemas*", "dataset*", "features*", "models*", "evaluation*", "fusion*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "dataset/tests", "features/tests", "models/tests", "evaluation/tests", "fusion/tests"]
addopts = "-v --tb=short"